Bug fix on small mobile displays in the #groudie section. I changed the icons listing to position:relative. Also added tiwtter cards.

--- a/css/main.css
+++ b/css/main.css
@@ -1045,7 +1045,7 @@ body h4{
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 60%;
+  width: 65%;
   min-height: 200px;
   margin-bottom: 60px;
 }
@@ -1125,7 +1125,7 @@ body h4{
   width: 100%;
   min-height: 100vh;
   text-align: center;
-  padding-bottom: 80px;
+  /* padding-bottom: 80px; */
   position: relative;
   background-color: #fff;
   overflow: hidden;
@@ -1145,11 +1145,11 @@ body h4{
   justify-content: center;
   align-items: center;
   padding: 0px;
-  position: absolute;
+  /* position: absolute;
   right: 0;   
   left: 0;
-  bottom:0; 
-  margin: auto;
+  bottom:0;  */
+  margin: auto auto 0px auto;
 }
 
 #groudie .me-imgs-icons-bottom span{
@@ -1173,6 +1173,7 @@ body h4{
   align-items: center;
   width: 100%;
   position: relative;
+  margin-top: auto;
 }
 
 #me-imgs .me-imgs-arrow{
